--- a/index.html
+++ b/index.html
@@ -1,21 +1,19 @@
-
 <html>
 <head>
 <title>Ingenieria en Mecatronica</title>
-<link href="css/style.css" rel="stylesheet">
 </head>
 <body bgcolor="#949AAA" text="#000000">  
 
 <center><p><h1>INGENIERIA EN MECATRONICA</h1></p></center>
 
 <a href="#">
-<p><img src="img/Inicio.jpg"></p></a>
+<center><p><img src="img/Inicio.jpg"></p></a></center>
 
 <a href="mecatronica.html">
 <center><p><img src="img/Mecatronica.jpg"></p></center></a>
 
 <a href="importancia.html">
-<p><img src="img/Importancia.jpg"></p></a>
+<center><p><img src="img/Importancia.jpg"></p></a></center>
 
 <a href="analisemos.html">
 <center><p><img src="img/Analizemos.jpg"></p></center></a>
@@ -65,7 +63,7 @@ Probabilidad y Estadística.</p>
 <p>*Robótica Industrial</p>
 
 
-</table></cent<body bgcolor="#949AAA" text="#04184F"> er>
+</table></center><body bgcolor="#949AAA" text="#04184F"> 
 <center>
 <a href="#">Inicio</a>-
 <a href="mecatronica.html">Mecatronica</a>-
@@ -73,11 +71,7 @@ Probabilidad y Estadística.</p>
 <a href="analisemos.html">Analisemos</a> <br>copyright 2022 mandamos un mensaje via email a
 <a href="mailto:zaidg4060@gmail">zaidg4060@gmail.com</a>
 
-<!--
-<ul>
-	<li><a href="#">Inicio</li></a>
-	<li><a href="mecatronica.html">Mecatronica</li></a>
-</ul>-->
+
 </center>
 </body> 
 </html>
