--- a/mecatronica.html
+++ b/mecatronica.html
@@ -32,8 +32,7 @@ que originalmente fueron creados como herramientas de guerra que serían utiliza
 para entregar mensajes, como para atacar soldados enemigos desde el aire sin poner en riesgo a ningún aliado.
 Sin embargo, en la actualidad estos aparatos tienen un uso muchísimo más enfocado al entretenimiento,
 por ejemplo como vehículos a control remoto, y son herramientas muy útiles para grabaciones de series o películas.</p></center>
-<center><img src ="img/<body bgcolor="#949AAA" text="#04184F"> Drones.jpg"></center>
-
+<center><img src="img/Drones.jpg"></center>
 <center><h1>2.Robots</h1></center>
 <center><p>Los robots son posiblemente el más grande de todos los avances de la Mecatrónica 
 y además, uno de los principales focos de estudio de esta carrera universitaria.
