--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 <center><p><h1>INGENIERIA EN MECATRONICA</h1></p></center>
 
 <a href="#">
-<center><p><img src="img/Inicio.jpg"></p></a></center>
+<center><p><img src="img/inicio.jpg"></p></a></center>
 
 <a href="mecatronica.html">
 <center><p><img src="img/Mecatronica.jpg"></p></center></a>
