--- a/index.html
+++ b/index.html
@@ -70,8 +70,8 @@ Probabilidad y Estadística.</p>
 <a href="importancia.html">Importancia</a>- 
 <a href="analisemos.html">Analisemos</a> <br>copyright 2022 mandamos un mensaje via email a
 <a href="mailto:zaidg4060@gmail">zaidg4060@gmail.com</a>
-
-
+<br>
+  <div id="c_e59e03e3dba405525d953f54901e508b" class="normal"></div><script type="text/javascript" src="https://www.eltiempo.es/widget/widget_loader/e59e03e3dba405525d953f54901e508b"></script>
 </center>
 </body> 
 </html>
