--- a/importancia.html
+++ b/importancia.html
@@ -14,7 +14,8 @@
 <p>Así entonces, la importancia de la ingeniería mecatrónica reside en que permite
 la concepción de la solución, la ingeniería básica, la ingeniería de detalle,
 el diseño, construcción, integración, el control, la puesta en marcha y validación
-en campo bajo normas y pruebas protocolarias.</p>
+en campo bajo normas y pruebas protocolarias.</p><br>
+ <center><audio controls src="media/audio2.mp3"></audio></center>
 </font></center>
 </td>
 </tr>
