--- a/mecatronica.html
+++ b/mecatronica.html
@@ -7,7 +7,7 @@
 <body bgcolor="#949AAA" text="#04184F">  
 
 <center><p><h1>Ing. Mecatrónica</h1></p></center>
-     <center><h2>PODCACAST MECATRONICA</h2></center>
+     <center><h2>PODCAST MECATRONICA</h2></center>
    <center><audio controls src="media/audio2.mp3"></audio></center>
 
 <center><p><h1>6 cosas que ha diseñado la Ing. Mecatrónica</h1></p></center>
