--- a/mecatronica.html
+++ b/mecatronica.html
@@ -9,6 +9,20 @@
 <center><p><h1>Ing. Mecatrónica</h1></p></center>
      <center><h2>PODCAST MECATRONICA</h2></center>
    <center><audio controls src="media/audio2.mp3"></audio></center>
+     
+    <center><p><h1> +15 Libros de Ingeniería Mecatrónica</h1></p></center>
+     <p> #Introducción a la mecatrónica
+      Ricardo Acosta Acosta</p>
+    <p>2) Mecatrónica
+     Oscar Baumann</p>
+    <p>3) Aprovechamiento holístico de la mecatrónica en los procesos de manufactura industriales (Artículo)
+     Aguinaga, Álvaro</p>
+    <p>4) Introducción (Artículo)
+   Colecciones Digitales UDLAP</p>
+    <p>5) Navegación autónoma de robots en agricultura: un modelo de agentes
+   Lía García Pérez</p>
+    <p>6) La mecatrónica: sistemas de automatización en serie
+   Pazmiño Piedra, Juan Pablo y Quintuña Padilla, Wilson Patricio</p>
 
 <center><p><h1>6 cosas que ha diseñado la Ing. Mecatrónica</h1></p></center>
 
