--- a/mecatronica.html
+++ b/mecatronica.html
@@ -11,7 +11,7 @@
    <center><audio controls src="media/audio2.mp3"></audio></center>
      
     <center><p><h1> +15 Libros de Ingeniería Mecatrónica</h1></p></center>
-     <p> #Introducción a la mecatrónica
+     <p> 1)Introducción a la mecatrónica
       Ricardo Acosta Acosta</p>
     <p>2) Mecatrónica
      Oscar Baumann</p>
