--- a/mecatronica.html
+++ b/mecatronica.html
@@ -11,18 +11,18 @@
    <center><audio controls src="media/audio2.mp3"></audio></center>
      
     <center><p><h1> +15 Libros de Ingeniería Mecatrónica</h1></p></center>
-     <p> 1)Introducción a la mecatrónica
-      Ricardo Acosta Acosta</p>
-    <p>2) Mecatrónica
-     Oscar Baumann</p>
-    <p>3) Aprovechamiento holístico de la mecatrónica en los procesos de manufactura industriales (Artículo)
-     Aguinaga, Álvaro</p>
-    <p>4) Introducción (Artículo)
-   Colecciones Digitales UDLAP</p>
-    <p>5) Navegación autónoma de robots en agricultura: un modelo de agentes
-   Lía García Pérez</p>
-    <p>6) La mecatrónica: sistemas de automatización en serie
-   Pazmiño Piedra, Juan Pablo y Quintuña Padilla, Wilson Patricio</p>
+     <p> 1)Introducción a la mecatrónica </p>
+     <p> Ricardo Acosta Acosta</p>
+    <p>2) Mecatrónica </p>
+    <p> Oscar Baumann</p>
+    <p>3) Aprovechamiento holístico de la mecatrónica en los procesos de manufactura industriales (Artículo)</p>
+    <p> Aguinaga, Álvaro</p>
+    <p>4) Introducción (Artículo)</p>
+      <p>Colecciones Digitales UDLAP</p>
+    <p>5) Navegación autónoma de robots en agricultura: un modelo de agentes</p>
+    <p> Lía García Pérez</p>
+    <p>6) La mecatrónica: sistemas de automatización en serie</p>
+   <p>Pazmiño Piedra, Juan Pablo y Quintuña Padilla, Wilson Patricio</p>
 
 <center><p><h1>6 cosas que ha diseñado la Ing. Mecatrónica</h1></p></center>
 
