--- a/mecatronica.html
+++ b/mecatronica.html
@@ -25,6 +25,11 @@
    <p>Pazmiño Piedra, Juan Pablo y Quintuña Padilla, Wilson Patricio</p>
 <br><br>
 <a href="#drones"><button>Ir a drones</button></a><br>
+<a href="#drones"><button>Ir a robost</button></a><br>
+<a href="#drones"><button>Ir a maquinas ensambladoras</button></a><br>
+<a href="#drones"><button>Ir a protesis roboticas</button></a><br>
+<a href="#drones"><button>Ir a impresoras 3D</button></a><br>
+<a href="#drones"><button>Ir a casas inteligentes</button></a><br>
 <center><p><h1>6 cosas que ha diseñado la Ing. Mecatrónica</h1></p></center>
 
 
