--- a/mecatronica.html
+++ b/mecatronica.html
@@ -31,13 +31,13 @@
     <p>6) La mecatrónica: sistemas de automatización en serie</p>
    <p>Pazmiño Piedra, Juan Pablo y Quintuña Padilla, Wilson Patricio</p>
 <br><br>
-<a href="#drones"><button>Ir a drones</button></a><br>
-<a href="#robost"><button>Ir a robost</button></a><br>
-<a href="#maquinas ensambladoras"><button>Ir a maquinas ensambladoras</button></a><br>
-<a href="#protesis roboticas"><button>Ir a protesis roboticas</button></a><br>
-<a href="#impresoras"><button>Ir a impresoras 3D</button></a><br>
-<a href="#casas inteligentes"><button>Ir a casas inteligentes</button></a><br>
-<center><p><h1>6 cosas que ha diseñado la Ing. Mecatrónica</h1></p></center>
+  <center><a href="#drones"><button>Ir a drones</button></a><br></center>
+  <center><a href="#robost"><button>Ir a robost</button></a><br></center>
+  <center><a href="#maquinas ensambladoras"><button>Ir a maquinas ensambladoras</button></a><br></center>
+  <center><a href="#protesis roboticas"><button>Ir a protesis roboticas</button></a><br></center>
+  <center><a href="#impresoras"><button>Ir a impresoras 3D</button></a><br></center>
+  <center><a href="#casas inteligentes"><button>Ir a casas inteligentes</button></a><br></center>
+<center><p><h1>6 cosas que ha diseñado la Ing. Mecatrónica</h1></p></center></center>
 
 
 <p>Con la tecnología avanzando a pasos cada vez más grandes nos estamos acercando
