--- a/mecatronica.html
+++ b/mecatronica.html
@@ -121,7 +121,7 @@ En algunos años seguramente esto no será un lujo, sino algo completamente norm
 
    <center><h2>ANALISEMOS MI OPINION</h2></center>
    
- <center> <H1> <a href="https://aliatuniversidades.com.mx/blog/index.php/ingenieria-mecatronica/">"QUE IMPLICA ESTUDIAR INGENIERIA EN MECATRONICA"</a> </H1></center>
+ <center> <H1> <a href="https://aliatuniversidades.com.mx/blog/index.php/ingenieria-mecatronica/">"LINCK¿¿linkQUE IMPLICA ESTUDIAR INGENIERIA EN MECATRONICA"</a> </H1></center>
 
 
 </body> 
