--- a/mecatronica.html
+++ b/mecatronica.html
@@ -33,10 +33,10 @@
 <br><br>
   <center><a href="#drones"><button>Ir a drones</button></a><br></center>
   <center><a href="#robost"><button>Ir a robost</button></a><br></center>
-  <center><a href="#maquinas ensambladoras"><button>Ir a maquinas ensambladoras</button></a><br></center>
-  <center><a href="#protesis roboticas"><button>Ir a protesis roboticas</button></a><br></center>
+  <center><a href="#maquinas"><button>Ir a maquinas ensambladoras</button></a><br></center>
+  <center><a href="#protesis"><button>Ir a protesis roboticas</button></a><br></center>
   <center><a href="#impresoras"><button>Ir a impresoras 3D</button></a><br></center>
-  <center><a href="#casas inteligentes"><button>Ir a casas inteligentes</button></a><br></center>
+  <center><a href="#casasinteligentes"><button>Ir a casas inteligentes</button></a><br></center>
 <center><p><h1>6 cosas que ha diseñado la Ing. Mecatrónica</h1></p></center></center>
 
 
@@ -67,7 +67,7 @@ para entregar mensajes, como para atacar soldados enemigos desde el aire sin pon
 Sin embargo, en la actualidad estos aparatos tienen un uso muchísimo más enfocado al entretenimiento,
 por ejemplo como vehículos a control remoto, y son herramientas muy útiles para grabaciones de series o películas.</p></center>
 <center><img  height=250px  src="img/Drones.jpg"></center>
-<center><h1>2.Robots</h1></center>
+<center><h1 id="robots">2.Robots</h1></center>
 <center><p>Los robots son posiblemente el más grande de todos los avances de la Mecatrónica 
 y además, uno de los principales focos de estudio de esta carrera universitaria.
 Eso sí, no nos referimos únicamente a las máquinas con forma y comportamientos humanos, 
@@ -78,7 +78,7 @@ algunas operaciones bastante complejas, en la minería, el estudio de la vida ma
 la vigilancia y también en la ayuda a personas con alguna discapacidad.</p></center>
 <p><center><img  height=250px  src="img/Robots.jpg"></p></a>  </center>
 
-<center><h1>3.Máquinas ensambladoras</h1></center>
+<center><h1 id="maquinas">3.Máquinas ensambladoras</h1></center>
 <center><p>Por otro lado, las máquinas ensambladoras también forman parte de la lista de las aportaciones más importantes de la Ingeniería
 Mecatrónica para la humanidad. Esto se debe a que ayudan a aumentar la productividad de las fábricas,
 disminuir los costos de las producciones e incluso a mejorar la calidad de los artículos.
@@ -87,7 +87,7 @@ del mercado global y que se generen mayores ganancias para las empresas de todos
 compañía puede beneficiarse de un aumento de productividad.</p></center>
 <p><center><img  height=250px  src="img/Maquinas.jpg"></p></a> </center>
 
-<center><h1>4.Prótesis robóticas</h1></center>
+<center><h1 id="protesis">4.Prótesis robóticas</h1></center>
 <center><p>Otro importante avance que surgió a partir de la Ingeniería Mecatrónica son las
 prótesis robóticas. Estos sistemas sirven para reemplazar extremidades del cuerpo 
 de una persona que haya sufrido algún accidente.
@@ -97,7 +97,7 @@ la Ingeniería Mecatrónica también ha jugado un papel muy importante dentro de
 de esta clase de tecnologías.</p></center>
 <center><p><img  height=250px  src="img/Protesis.jpg"></p></a></center>
 
-<center><h1>5. Impresoras 3D</h1></center>
+<center><h1 id="impresoras">5. Impresoras 3D</h1></center>
 <center><p>Un invento que se encuentra en pleno 
 auge en la actualidad son las impresoras 3D. 
 Éstas pueden usarse para crear productos que de otra manera sería completamente imposible 
@@ -107,7 +107,7 @@ Eso sí, debes saber que al requerir movimientos precisos en diversos ángulos y
 es necesario que sea un robot muy sofisticado el que se encargue de realizar estas maniobras.</p></center>
 <center><p><img  height=250px  src="img/Impreciones.jpg"></p></a></center>
 
-<center><h1>6.Casas inteligentes</h1></center>
+<center><h1 id="casasinteligentes">6.Casas inteligentes</h1></center>
 <center><p>En la búsqueda de mejorar nuestra calidad de vida y hacer nuestra rutina mucho más fácil,
 ya existen muchos prototipos de casas que están construidas desde sus estructuras con servicios
 y componentes móviles que tienen como objetivo mejorar la experiencia de aquellos que las habitan.
