--- a/mecatronica.html
+++ b/mecatronica.html
@@ -118,10 +118,12 @@ funciones mucho más complejas como limpiar y ordenar las diversas
 habitaciones o hasta deshacerse de la basura con presionar un botón.
 En algunos años seguramente esto no será un lujo, sino algo completamente normal.</p></center>
 <center><img  height=250px  src="img/casa.jpeg"></a></center>
-<a href="mecatronica.pdf" download="mecatronica.pdf"><span></span>Descargar</a>
+
+<a href="http://www.mecamex.net/Libros/2018-Libro-Robotica-y-Mecatronica.pdfmecatronica.pdf" download="http://www.mecamex.net/Libros/2018-Libro-Robotica-y-Mecatronica.pdf"><span></span>Descargar</a>
+
    <center><h2>ANALISEMOS MI OPINION</h2></center>
    
- <center> <H1> <a href="https://aliatuniversidades.com.mx/blog/index.php/ingenieria-mecatronica/">"LINCK¿¿linkQUE IMPLICA ESTUDIAR INGENIERIA EN MECATRONICA"</a> </H1></center>
+ <center> <H1> <a href="https://aliatuniversidades.com.mx/blog/index.php/ingenieria-mecatronica/">"LINCK IMPLICA ESTUDIAR INGENIERIA EN MECATRONICA"</a> </H1></center>
 
 
 </body> 
