--- a/mecatronica.html
+++ b/mecatronica.html
@@ -37,9 +37,44 @@
   <center><a href="#protesis"><button>Ir a protesis roboticas</button></a><br></center>
   <center><a href="#impresoras"><button>Ir a impresoras 3D</button></a><br></center>
   <center><a href="#casasinteligentes"><button>Ir a casas inteligentes</button></a><br></center>
+
+
+            <table>
+                <thead>
+                    <tr>
+                        <th>Algunas de las asignaturas que </th> <th>contempla la Ingeniería Mecatrónica</th> 
+                    </tr>
+                </thead>
+
+                <tr>
+                    <td>Cálculo Diferencial </td><td>Integral y Multivariado</td>
+                </tr>
+                <tr>
+                    <td>Probabilidad </td><td> Estadística.</td>
+                </tr>
+                <tr>
+                    <td>Álgebra lineal</td><td>Estática</td>
+                </tr>
+                <tr>
+                    <td>La Maquina de Vapor</td><td>Dinámica</td>
+                </tr>
+                <tr>
+                    <td>Termodinámica</td><td>Mecánica de Materiales</td>
+                </tr>
+                <tr>
+                    <td>Mecánica de Fluidos.</td><td>Diseño por computadora.</td>
+                </tr>
+                <tr>
+                    <td>Diseño de componentes mecánicos</td><td>Teoría de Contro</td>
+                </tr>
+                <tr>
+                    <td>Automatización</td><td>Robótica Industrial</td>
+                </tr>
+            </table>
+        </div>
+</table></center>
+
 <center><p><h1>6 cosas que ha diseñado la Ing. Mecatrónica</h1></p></center></center>
-
-
 <p>Con la tecnología avanzando a pasos cada vez más grandes nos estamos acercando
 rápidamente a un mundo que parece sacado de libros de ficción, y esto es gracias a muchas ciencias,
 una de ellas la Ingeniería Mecatrónica,que aportan de múltiples maneras sus beneficios y sus
