--- a/importancia.html
+++ b/importancia.html
@@ -12,9 +12,15 @@
 <center><font face="verdadera">
 <h1>IMPORTANCIA DE LA MECATRONICA</h1>
 <p>Así entonces, la importancia de la ingeniería mecatrónica reside en que permite
-la concepción de la solución, la ingeniería básica, la ingeniería de detalle,
-el diseño, construcción, integración, el control, la puesta en marcha y validación
-en campo bajo normas y pruebas protocolarias.</p><br>
+ 1.concepción de la solución
+ 2.la ingeniería básica
+ 3.la ingeniería de detalle
+ 4.diseño
+ 5.construcción
+ 6.integración
+ 7.el control
+ 8.la puesta en marcha y validación
+ en campo bajo normas y pruebas protocolarias.</p><br>
  <center><audio controls src="media/audio2.mp3"></audio></center>
 </font></center>
 </td>
