--- a/importancia.html
+++ b/importancia.html
@@ -11,15 +11,15 @@
 <td colspan="0">
 <center><font face="verdadera">
 <h1>IMPORTANCIA DE LA MECATRONICA</h1>
-<p>Así entonces, la importancia de la ingeniería mecatrónica reside en que permite
- 1.concepción de la solución
- 2.la ingeniería básica
- 3.la ingeniería de detalle
- 4.diseño
- 5.construcción
- 6.integración
- 7.el control
- 8.la puesta en marcha y validación
+<p>Así entonces, la importancia de la ingeniería mecatrónica reside en que permite</p>
+ <p>1.concepción de la solución</p>
+ <p>2.la ingeniería básica</p>
+ <p>3.la ingeniería de detalle</p>
+ <p>4.diseño</p>
+ <p>5.construcción</p>
+ <p>6.integración</p>
+ <p>7.el control</p>
+ <p>8.la puesta en marcha y validación
  en campo bajo normas y pruebas protocolarias.</p><br>
   <center><h2>PODCAST IMPORTANCIA</h2></center>
  <center><audio controls src="media/audio2.mp3"></audio></center>
