--- a/importancia.html
+++ b/importancia.html
@@ -6,6 +6,11 @@
 </head>
 <body bgcolor="#949AAA" text="#04184F">  
  
+ <center><a href="#IMPORTANCIA DE LA MECATRONICA"><button>Ir a drones</button>
+  <a href="#LA IMPORTANCIA DE LA MECATRONICA EN LA INDUSTRIA"><button>Ir a drones</button>
+  <a href="#CARRERA TECNICA DE LA MECATRONICA"><button>Ir a drones</button>
+  <a href="# TECNICA DE LA MECATRONICA"><button>Ir a drones</button>
+ 
 <center><table border="10" width="90%" bgcolor="#A8B3D2">
 <tr>
 <td colspan="0">
@@ -26,19 +31,19 @@
 </font></center>
 </td>
 </tr>
-   <center><h2>IMPORTANCIA</h2></center>
+   <center><h2 id="IMPORTANCIA DE LA MECATRONICA" >IMPORTANCIA</h2></center>
 
  <center> <iframe width="560" height="315" src="https://www.youtube.com/embed/I9IQys996Xg" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>  </center>
 
 <td>
-<center><h1><p>LA IMPORTANCIA DE LA MECATRONICA EN LA INDUSTRIA</p></h1></center>
+<center><h1 id="LA IMPORTANCIA DE LA MECATRONICA EN LA INDUSTRIA" ><p>LA IMPORTANCIA DE LA MECATRONICA EN LA INDUSTRIA</p></h1></center>
 <p>Muchos de las cosas que utilizamos hoy en día, dependen de equipos y sistemas mecatrónicos,
  por ello, la carrera técnica de Mecatrónica Industrial es una de las más importantes actualmente.</p>
  <center><p><img  height=250px  src="img/Brazo.jpg"></p></a></center>
 </td>
 
 <tr>
-<td><center><h1><p>CARRERA TECNICA DE LA MECATRONICA</p></h1></center>
+<td><center><h1 id="CARRERA TECNICA DE LA MECATRONICA" ><p>CARRERA TECNICA DE LA MECATRONICA</p></h1></center>
 La carrera técnica de Mecatrónica Industrial es una de las más importantes actualmente,
 ya que reúne disciplinas como la mecánica, la electrónica y la informática para crear la 
 mejor solución en las actividades humanas.
@@ -47,7 +52,7 @@ mejor solución en las actividades humanas.
 
 
 <tr>
-<td><center><h1><p>CARRERA TECNICA DE LA MECATRONICA</p></h1>
+<td><center><h1 id="TECNICA DE LA MECATRONICA" ><p>CARRERA TECNICA DE LA MECATRONICA</p></h1>
 El profesional técnico en Mecatrónica Industrial está preparado para innovar, diseñar,
 evaluar, gestionar y mantener sistemas mecatrónicos. Adquieren conocimientos y habilidades
 en el campo de la ingeniería, aplicándola a equipos y sistemas de última generación, utilizados
