--- a/importancia.html
+++ b/importancia.html
@@ -9,7 +9,7 @@
  <center><a href="#IMPORTANCIA DE LA MECATRONICA"><button>Ir a drones</button>
   <a href="#LA IMPORTANCIA DE LA MECATRONICA EN LA INDUSTRIA"><button>Ir a drones</button>
   <a href="#CARRERA TECNICA DE LA MECATRONICA"><button>Ir a drones</button>
-  <a href="# TECNICA DE LA MECATRONICA"><button>Ir a drones</button>
+  <a href="# TECNICA DE LA MECATRONICA"><button>Ir a drones</button></center>
  
 <center><table border="10" width="90%" bgcolor="#A8B3D2">
 <tr>
