--- a/importancia.html
+++ b/importancia.html
@@ -15,7 +15,7 @@
 <tr>
 <td colspan="0">
 <center><font face="verdadera">
-<h1>IMPORTANCIA DE LA </h1>
+<h1>IMPORTANCIA DE LA xxxxxx</h1>
 <p>Así entonces, la importancia de la ingeniería mecatrónica reside en que permite</p>
  <p>1.concepción de la solución</p>
  <p>2.la ingeniería básica</p>
