--- a/importancia.html
+++ b/importancia.html
@@ -6,10 +6,10 @@
 </head>
 <body bgcolor="#949AAA" text="#04184F">  
  
- <center><a href="#IMPORTANCIA DE LA MECATRONICA"><button>Ir a drones</button>
-  <a href="#LA IMPORTANCIA DE LA MECATRONICA EN LA INDUSTRIA"><button>Ir a drones</button>
-  <a href="#CARRERA TECNICA DE LA MECATRONICA"><button>Ir a drones</button>
-  <a href="# TECNICA DE LA MECATRONICA"><button>Ir a drones</button></center>
+ <center><a href="#IMPORTANCIA DE LA MECATRONICA"><button>Ir IMPORTANCIA DE LA MECATRONICA</button>
+  <a href="#LA IMPORTANCIA DE LA MECATRONICA EN LA INDUSTRIA"><button>Ir LA IMPORTANCIA DE LA MECATRONICA EN LA INDUSTRIA</button>
+  <a href="#CARRERA TECNICA DE LA MECATRONICA"><button>Ir CARRERA TECNICA DE LA MECATRONICA</button>
+  <a href="# TECNICA DE LA MECATRONICA"><button>Ir TECNICA DE LA MECATRONICA</button></center>
  
 <center><table border="10" width="90%" bgcolor="#A8B3D2">
 <tr>
