--- a/importancia.html
+++ b/importancia.html
@@ -60,6 +60,8 @@ en el campo de la minería, construcción y transporte pesado.
 <center><p><img  height=250px  src="img/tecnica.jpg"></p></a></center>
 </tr></td>
 </table></center>
+ 
+  <center> <H1> <a href="https://orientacion.universia.edu.pe/infodetail/orientacion/consejos-tecnoversia/la-importancia-de-la-mecatronica-en-la-industria-5585.html"</a> </H1></center>
 
    <center><h2>IMPORTRANCIA MI OPINION</h2></center>
 
