--- a/importancia.html
+++ b/importancia.html
@@ -6,13 +6,13 @@
 </head>
 <body bgcolor="#949AAA" text="#04184F">  
  
-<center>
+<space><center>
 <a href="index.html">Inicio</a>-
 <a href="mecatronica.html">Mecatronica</a>-
 <a href="importancia.html">Importancia</a>- 
 <a href="analisemos.html">Analisemos</a> <br>copyright 2022 mandamos un mensaje via email a
 <a href="mailto:zaidg4060@gmail">zaidg4060@gmail.com</a>
-</center>
+</center></space>
  
  <center><a href="#IMPORTANCIA DE LA MECATRONICA"><button>Ir IMPORTANCIA DE LA MECATRONICA</button>
   <a href="#LA IMPORTANCIA DE LA MECATRONICA EN LA INDUSTRIA"><button>Ir LA IMPORTANCIA DE LA MECATRONICA EN LA INDUSTRIA</button>
