--- a/mecatronica.html
+++ b/mecatronica.html
@@ -154,6 +154,7 @@ habitaciones o hasta deshacerse de la basura con presionar un botón.
 En algunos años seguramente esto no será un lujo, sino algo completamente normal.</p></center>
 <center><img  height=250px  src="img/casa.jpeg"></a></center>
 
+ <center><h2>libro robotica seleciona para decargar</h2></center>
 <center> <a href="http://www.mecamex.net/Libros/2018-Libro-Robotica-y-Mecatronica.pdfmecatronica.pdf" download="http://www.mecamex.net/Libros/2018-Libro-Robotica-y-Mecatronica.pdf"><span></span>Descargar</a> </center>
 
    <center><h2>ANALISEMOS MI OPINION</h2></center>
