--- a/mecatronica.html
+++ b/mecatronica.html
@@ -149,7 +149,6 @@ y componentes móviles que tienen como objetivo mejorar la experiencia de aquell
 Algunas de las características que las componen son la posibilidad de
 controlar desde un dispositivo móvil, las luces de las diferentes partes de la casa,
 la música, las cerraduras y vigilar cuánto gas tenemos disponible. Sin embargo, se espera que se desarrollen
-funciones mucho más complejas como limpiar y ordenar las diversas
 habitaciones o hasta deshacerse de la basura con presionar un botón.
 En algunos años seguramente esto no será un lujo, sino algo completamente normal.</p></center>
 <center><img  height=250px  src="img/casa.jpeg"></a></center>
@@ -159,7 +158,7 @@ En algunos años seguramente esto no será un lujo, sino algo completamente norm
 
    <center><h2>ANALISEMOS MI OPINION</h2></center>
    
- <center> <H1> <a about:blank href="https://aliatuniversidades.com.mx/blog/index.php/ingenieria-mecatronica/">"LINCK IMPLICA ESTUDIAR INGENIERIA EN MECATRONICA"</a> </H1></center>
+ <center> <H1> <a href="https://aliatuniversidades.com.mx/blog/index.php/ingenieria-mecatronica/">"LINCK IMPLICA ESTUDIAR INGENIERIA EN MECATRONICA"</a> </H1></center>
 
 
 </body> 
