--- a/importancia.html
+++ b/importancia.html
@@ -39,7 +39,7 @@
 </font></center>
 </td>
 </tr>
-   <center><h2 id="IMPORTANCIA DE LA MECATRONICA" >IMPORTANCIA</h2></center>
+   <center><h2 "IMPORTANCIA DE LA MECATRONICA" >IMPORTANCIA</h2></center>
 
  <center> <iframe width="560" height="315" src="https://www.youtube.com/embed/I9IQys996Xg" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>  </center>
 
