--- a/importancia.html
+++ b/importancia.html
@@ -69,6 +69,41 @@ en el campo de la minería, construcción y transporte pesado.
 </tr></td>
 </table></center>
  
+   <table>
+                <thead>
+                    <tr>
+                        <th>Algunas de las asignaturas que </th> <th>contempla la Ingeniería Mecatrónica</th> 
+                    </tr>
+                </thead>
+
+                <tr>
+                    <td>Cálculo Diferencial </td><td>Integral y Multivariado</td>
+                </tr>
+                <tr>
+                    <td>Probabilidad </td><td> Estadística.</td>
+                </tr>
+                <tr>
+                    <td>Álgebra lineal</td><td>Estática</td>
+                </tr>
+                <tr>
+                    <td>La Maquina de Vapor</td><td>Dinámica</td>
+                </tr>
+                <tr>
+                    <td>Termodinámica</td><td>Mecánica de Materiales</td>
+                </tr>
+                <tr>
+                    <td>Mecánica de Fluidos.</td><td>Diseño por computadora.</td>
+                </tr>
+                <tr>
+                    <td>Diseño de componentes mecánicos</td><td>Teoría de Contro</td>
+                </tr>
+                <tr>
+                    <td>Automatización</td><td>Robótica Industrial</td>
+                </tr>
+            </table>
+        </div>
+</table></center>
+ 
   <center> <H1> <a href="https://orientacion.universia.edu.pe/infodetail/orientacion/consejos-tecnoversia/la-importancia-de-la-mecatronica-en-la-industria-5585.html"</a> </H1></center>
 
    <center><h2>IMPORTRANCIA MI OPINION</h2></center>
