--- a/analisemos.html
+++ b/analisemos.html
@@ -31,6 +31,41 @@
 <body>
 <br>
    <center><img  height=250px  src="img/ingenieria.jpg"></center>
+   
+            <table>
+                <thead>
+                    <tr>
+                        <th>Algunas de las asignaturas que </th> <th>contempla la Ingeniería Mecatrónica</th> 
+                    </tr>
+                </thead>
+
+                <tr>
+                    <td>Cálculo Diferencial </td><td>Integral y Multivariado</td>
+                </tr>
+                <tr>
+                    <td>Probabilidad </td><td> Estadística.</td>
+                </tr>
+                <tr>
+                    <td>Álgebra lineal</td><td>Estática</td>
+                </tr>
+                <tr>
+                    <td>La Maquina de Vapor</td><td>Dinámica</td>
+                </tr>
+                <tr>
+                    <td>Termodinámica</td><td>Mecánica de Materiales</td>
+                </tr>
+                <tr>
+                    <td>Mecánica de Fluidos.</td><td>Diseño por computadora.</td>
+                </tr>
+                <tr>
+                    <td>Diseño de componentes mecánicos</td><td>Teoría de Contro</td>
+                </tr>
+                <tr>
+                    <td>Automatización</td><td>Robótica Industrial</td>
+                </tr>
+            </table>
+        </div>
+</table></center>
    <hr>
    <center><h2>PODCACAST MECATRONICA</h2></center>
    <center><audio controls src="media/podcast_mecatronica.mp3"></audio></center>
