--- a/analisemos.html
+++ b/analisemos.html
@@ -30,11 +30,15 @@
 </head>
 <body>
 <br>
+   
+   <a href="#audio">ir al audio</a>
+   <a href="#video">ir al video</a>
+   <a href="#tabla">ir a la tabla</a>
       <center><h2>seleciona para descargar </h2></center>
 
    <center><img  height=250px  src="img/ingenieria.jpg"></center>
    
-            <table>
+            <table id="tabla">
                 <thead>
                     <tr>
                         <th>Algunas de las asignaturas que </th> <th>contempla la Ingeniería Mecatrónica</th> 
@@ -70,10 +74,10 @@
 </table></center>
    <hr>
    <center><h2>PODCACAST MECATRONICA</h2></center>
-   <center><audio controls src="media/podcast_mecatronica.mp3"></audio></center>
+   <center><audio id="audio" controls src="media/podcast_mecatronica.mp3"></audio></center>
    <hr>
    <center><h2>QUE ES ES LA PROGRAMACION </h2></center>
-     <center> <iframe width="560" height="315" src="https://www.youtube.com/embed/Ne9DOdZhtcg" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe> </center>
+     <center> <iframe width="560" height="315" id="video" src="https://www.youtube.com/embed/Ne9DOdZhtcg" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe> </center>
       <center><h2>ANALISEMOS MI OPINION</h2></center>
    </body>
    </html>
