--- a/analisemos.html
+++ b/analisemos.html
@@ -31,9 +31,9 @@
 <body>
 <br>
    
-   <a href="#audio">ir al audio</a>
-   <a href="#video">ir al video</a>
-   <a href="#tabla">ir a la tabla</a>
+   <a href="#audio"><button>ir al audio</button></a>
+   <a href="#video"><button>ir al video</button></a>
+   <a href="#tabla"><button>ir a la tabla</button></a>
       <center><h2>seleciona para descargar </h2></center>
 
    <center><img  height=250px  src="img/ingenieria.jpg"></center>
