--- a/analisemos.html
+++ b/analisemos.html
@@ -31,9 +31,9 @@
 <body>
 <br>
    
-   <a href="#audio"><button>ir al audio</button></a>
-   <a href="#video"><button>ir al video</button></a>
-   <a href="#tabla"><button>ir a la tabla</button></a>
+   <a href="#audio"><button>ir al audio</button></a><br>
+   <a href="#video"><button>ir al video</button></a><br>
+   <a href="#tabla"><button>ir a la tabla</button></a><br>
       <center><h2>seleciona para descargar </h2></center>
 
    <center><img  height=250px  src="img/ingenieria.jpg"></center>
