--- a/analisemos.html
+++ b/analisemos.html
@@ -78,6 +78,6 @@
    <hr>
    <center><h2>QUE ES ES LA PROGRAMACION </h2></center>
      <center> <iframe width="560" height="315" id="video" src="https://www.youtube.com/embed/Ne9DOdZhtcg" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe> </center>
-      <center><h2>ANALISEMOS MI OPINION</h2></center>
+      <center><h2>LIMK ANALISEMOS MI OPINION</h2></center>
    </body>
    </html>
