--- a/analisemos.html
+++ b/analisemos.html
@@ -21,7 +21,7 @@
 </center>
 </body> 
 </html>
-<a> 
+<h1> 
 La Ingeniería Informática comparte El control Digital con La Ingeniería de Control y cerramos el círculo con la Ingeniera de Control que comparte el Control Electrónico con la Ingeniería Electrónica.
 
 Todo esto es lo que llamamos Ingeniería Mecatrónica.
@@ -32,7 +32,7 @@ De hecho, la Mecatrónica pretende ser esa disciplina o Ingeniería en la que lo
 
 Su punto fuerte es la versatilidad para crear mejores productos, procesos o sistemas.
 
-La Mecatrónica no es un concepto nuevo o una ingeniera nueva, sino, la síntesis de ciertas áreas de ingeniería.</a>
+La Mecatrónica no es un concepto nuevo o una ingeniera nueva, sino, la síntesis de ciertas áreas de ingeniería.</h1>
 
 
 <!DOCTYPE html>
