--- a/analisemos.html
+++ b/analisemos.html
@@ -22,7 +22,7 @@
 </body> 
 </html>
 <h1> 
-La Ingeniería Informática comparte El control Digital con La Ingeniería de Control y cerramos el círculo con la Ingeniera de Control que comparte el Control Electrónico con la Ingeniería Electrónica.
+La Ingeniería Informática comparte El control Digital con La Ingeniería de Control y cerramos el círculo con la Ingeniera de Control que comparte el Control Electrónico con la Ingeniería Electrónica.</h1>
 
 Todo esto es lo que llamamos Ingeniería Mecatrónica.
 Aplicaciones de la Mecatrónica
