--- a/analisemos.html
+++ b/analisemos.html
@@ -22,17 +22,17 @@
 </body> 
 </html>
 
-<h1> La Ingeniería Informática comparte El control Digital con La Ingeniería de Control y cerramos el círculo con la Ingeniera de Control que comparte el Control Electrónico con la Ingeniería Electrónica.</h1>
+<p> La Ingeniería Informática comparte El control Digital con La Ingeniería de Control y cerramos el círculo con la Ingeniera de Control que comparte el Control Electrónico con la Ingeniería Electrónica.</h1>
 
-<h1>Todo esto es lo que llamamos Ingeniería Mecatrónica.</h1>
-<h1>Aplicaciones de la Mecatrónica</h1>
-<h1>Entendiendo que la Mecatrónica abarca disciplinas muy amplias y complejas podemos decir que tiene muchos campos de aplicación.</h1>
+<p>Todo esto es lo que llamamos Ingeniería Mecatrónica.</p>
+<p>Aplicaciones de la Mecatrónica</p>
+<p>Entendiendo que la Mecatrónica abarca disciplinas muy amplias y complejas podemos decir que tiene muchos campos de aplicación.</p>
 
-<h1>De hecho, la Mecatrónica pretende ser esa disciplina o Ingeniería en la que los productos se fabriquen teniendo en cuenta todas las ingenierías y no estando separadas como tradicionalmente.</h1>
+<p>De hecho, la Mecatrónica pretende ser esa disciplina o Ingeniería en la que los productos se fabriquen teniendo en cuenta todas las ingenierías y no estando separadas como tradicionalmente.</p>
 
-<h1>Su punto fuerte es la versatilidad para crear mejores productos, procesos o sistemas.</h1>
+<p>Su punto fuerte es la versatilidad para crear mejores productos, procesos o sistemas.</p>
 
-<h1>La Mecatrónica no es un concepto nuevo o una ingeniera nueva, sino, la síntesis de ciertas áreas de ingeniería.</h1>
+<p>La Mecatrónica no es un concepto nuevo o una ingeniera nueva, sino, la síntesis de ciertas áreas de ingeniería.</p>
 
 
 <!DOCTYPE html>
