--- a/analisemos.html
+++ b/analisemos.html
@@ -89,9 +89,10 @@
    <center><audio id="audio" controls src="media/podcast_mecatronica.mp3"></audio></center>
    <hr>
    <center><h2>QUE ES ES LA PROGRAMACION </h2></center>
-     <center> <iframe width="560" height="315" id="video" src="https://www.youtube.com/embed/Ne9DOdZhtcg" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe> </center>
+     
 
-<center><h2>LINK ANALISEMOS MI OPINION</h2></center><a href="https://issuu.com/rodrigoperezvillegas/docs/analisis_de_la_mecatronica_en_mexic_38b47385a644b7">Link prueba</a>
+<center><h2>LINK ANALISEMOS MI OPINION</h2></center>
+<center><a href="https://issuu.com/rodrigoperezvillegas/docs/analisis_de_la_mecatronica_en_mexic_38b47385a644b7">Link prueba</a></center>
 
    </body>
    </html>
