--- a/analisemos.html
+++ b/analisemos.html
@@ -91,7 +91,7 @@
    <center><h2>QUE ES ES LA PROGRAMACION </h2></center>
      
 
-<center><h2>LINK ANALISEMOS MI OPINION</h2><a href="https://issuu.com/rodrigoperezvillegas/docs/analisis_de_la_mecatronica_en_mexic_38b47385a644b7">Link prueba</a></center>
+<center><h2>LINK ANALISEMOS MI OPINION</h2><a target="_BLANK" href="https://issuu.com/rodrigoperezvillegas/docs/analisis_de_la_mecatronica_en_mexic_38b47385a644b7">Link prueba</a></center>
 
 
    </body>
