--- a/mecatronica.html
+++ b/mecatronica.html
@@ -153,7 +153,7 @@ habitaciones o hasta deshacerse de la basura con presionar un botón.
 En algunos años seguramente esto no será un lujo, sino algo completamente normal.</p></center>
 <center><img  height=250px  src="img/casa.jpeg"></a></center>
 
- <center><h2>libro robotica seleciona para decargar</h2></center>
+ <center><h2>LIBRO MECATRONICA PULSA PARA DECARGAR </h2></center>
 <center> <a href="media/mecatronica.pdf" download="mecatronica.pdf"><span></span>Descargar</a> </center>
 
    <center><h2>ANALISEMOS MI OPINION</h2></center>
