--- a/analisemos.html
+++ b/analisemos.html
@@ -24,15 +24,12 @@
 
 <p> La Ingeniería Informática comparte El control Digital con La Ingeniería de Control y cerramos el círculo con la Ingeniera de Control que comparte el Control Electrónico con la Ingeniería Electrónica.</h1>
 
-<p>Todo esto es lo que llamamos Ingeniería Mecatrónica.</p>
-<p>Aplicaciones de la Mecatrónica</p>
-<p>Entendiendo que la Mecatrónica abarca disciplinas muy amplias y complejas podemos decir que tiene muchos campos de aplicación.</p>
+<p>*Todo esto es lo que llamamos Ingeniería Mecatrónica.</p>
+<p>*Aplicaciones de la Mecatrónica</p>
+<p>*Entendiendo que la Mecatrónica abarca disciplinas muy amplias y complejas podemos decir que tiene muchos campos de aplicación.</p>
 
-<p>De hecho, la Mecatrónica pretende ser esa disciplina o Ingeniería en la que los productos se fabriquen teniendo en cuenta todas las ingenierías y no estando separadas como tradicionalmente.</p>
-
-<p>Su punto fuerte es la versatilidad para crear mejores productos, procesos o sistemas.</p>
-
-<p>La Mecatrónica no es un concepto nuevo o una ingeniera nueva, sino, la síntesis de ciertas áreas de ingeniería.</p>
+<p>De hecho, la Mecatrónica pretende ser esa disciplina o Ingeniería en la que los productos se fabriquen teniendo en cuenta todas las ingenierías y no estando separadas como tradicionalmente
+Su punto fuerte es la versatilidad para crear mejores productos, procesos o sistemas,La Mecatrónica no es un concepto nuevo o una ingeniera nueva, sino, la síntesis de ciertas áreas de ingeniería.</p>
 
 
 <!DOCTYPE html>
