--- a/importancia.html
+++ b/importancia.html
@@ -104,7 +104,7 @@ en el campo de la minería, construcción y transporte pesado.
         </div>
 </table></center>
  
-  <center> <H1> <a href="https://orientacion.universia.edu.pe/infodetail/orientacion/consejos-tecnoversia/la-importancia-de-la-mecatronica-en-la-industria-5585.html"</a> </H1></center>
+  <center> <H1> <a target="_BLANK"  href="https://orientacion.universia.edu.pe/infodetail/orientacion/consejos-tecnoversia/la-importancia-de-la-mecatronica-en-la-industria-5585.html"</a> </H1></center>
 
    <center><h2>IMPORTRANCIA MI OPINION</h2></center>
 
