--- a/importancia.html
+++ b/importancia.html
@@ -104,9 +104,9 @@ en el campo de la minería, construcción y transporte pesado.
         </div>
 </table></center>
  
-  <center> <H1> <a target="_BLANK"  href="https://orientacion.universia.edu.pe/infodetail/orientacion/consejos-tecnoversia/la-importancia-de-la-mecatronica-en-la-industria-5585.html"</a> </H1></center>
+  <center> <H2> <a target="_BLANK"  href="https://orientacion.universia.edu.pe/infodetail/orientacion/consejos-tecnoversia/la-importancia-de-la-mecatronica-en-la-industria-5585.html"</a> LINK IMPORTANCIA </H2></center>
 
-   <center><h2>IMPORTANCIA MI OPINION</h2></center>
+
 
 </body> 
 </html>
