--- a/mecatronica.html
+++ b/mecatronica.html
@@ -158,7 +158,7 @@ En algunos años seguramente esto no será un lujo, sino algo completamente norm
 
    <center><h2>ANALISEMOS MI OPINION</h2></center>
    
- <center> <H2> <a target="_BLANK"  href="https://aliatuniversidades.com.mx/blog/index.php/ingenieria-mecatronica/">"LINCK IMPLICA ESTUDIAR INGENIERIA EN MECATRONICA"</a> </H2></center>
+ <center> <H2> <a target="_BLANK"  href="https://aliatuniversidades.com.mx/blog/index.php/ingenieria-mecatronica/">LINCK IMPLICA ESTUDIAR INGENIERIA EN MECATRONICA</a> </H2></center>
 
 
 </body> 
