--- a/analisemos.html
+++ b/analisemos.html
@@ -43,7 +43,8 @@ Su punto fuerte es la versatilidad para crear mejores productos, procesos o sist
    <center><a href="#audio"><button>ir al audio</button></a><br>
    <a href="#video"><button>ir al video</button></a><br>
    <a href="#tabla"><button>ir a la tabla</button></a><br></center>
-      <center><h2>seleciona para descargar </h2></center>
+      <center><h2>ANALIZEMOS MECATRONICA PULSA DESCARGAR</h2></center>
+      <center><h1> descargar </h1></center>
 
    <center><img  height=250px  src="img/ingenieria.jpg"></center>
    
