--- a/analisemos.html
+++ b/analisemos.html
@@ -87,7 +87,7 @@ Su punto fuerte es la versatilidad para crear mejores productos, procesos o sist
    <center><audio id="audio" controls src="media/podcast_mecatronica.mp3"></audio></center>
    <hr>
      
-<center><a target="_BLANK" href="https://issuu.com/rodrigoperezvillegas/docs/analisis_de_la_mecatronica_en_mexic_38b47385a644b7"><h2>LINK ANALISEMOS MI OPINION</h2></a></center>
+<center><a target="_BLANK" href="https://issuu.com/rodrigoperezvillegas/docs/analisis_de_la_mecatronica_en_mexic_38b47385a644b7"><h2>LINK ANALISEMOS MECATRONICA</h2></a></center>
 
    </body>
    </html>
