--- a/importancia.html
+++ b/importancia.html
@@ -103,6 +103,8 @@ en el campo de la minería, construcción y transporte pesado.
             </table>
         </div>
 </table></center>
+
+<center><h2>ANALISEMOS MI OPINION</h2></center>
  
   <center> <H2> <a target="_BLANK"  href="https://orientacion.universia.edu.pe/infodetail/orientacion/consejos-tecnoversia/la-importancia-de-la-mecatronica-en-la-industria-5585.html"</a> LINK IMPORTANCIA </H2></center>
 
