--- a/analisemos.html
+++ b/analisemos.html
@@ -44,9 +44,12 @@ Su punto fuerte es la versatilidad para crear mejores productos, procesos o sist
    <a href="#video"><button>ir al video</button></a><br>
    <a href="#tabla"><button>ir a la tabla</button></a><br></center>
       <center><h2>ANALIZEMOS MECATRONICA PULSA DESCARGAR</h2></center>
-      <center><h1> descargar </h1></center>
+      <center> descargar </center>
 
    <center><img  height=250px  src="img/ingenieria.jpg"></center>
+      
+      
+<center><h2>ANALISEMOS MI OPINION</h2></center>
    
             <table id="tabla">
                 <thead>
