--- a/importancia.html
+++ b/importancia.html
@@ -109,6 +109,6 @@ en el campo de la minería, construcción y transporte pesado.
   <center> <H2> <a target="_BLANK"  href="https://orientacion.universia.edu.pe/infodetail/orientacion/consejos-tecnoversia/la-importancia-de-la-mecatronica-en-la-industria-5585.html"</a> LINK IMPORTANCIA </H2></center>
 
 
-
+<a href="mailto:zaidg4060@gmail">zaidg4060@gmail.com</a>
 </body> 
 </html>
