--- a/analisemos.html
+++ b/analisemos.html
@@ -91,6 +91,6 @@ Su punto fuerte es la versatilidad para crear mejores productos, procesos o sist
    <hr>
      
 <center><a target="_BLANK" href="https://issuu.com/rodrigoperezvillegas/docs/analisis_de_la_mecatronica_en_mexic_38b47385a644b7"><h2>LINK ANALISEMOS MECATRONICA</h2></a></center>
-
+<a href="mailto:zaidg4060@gmail">zaidg4060@gmail.com</a>
    </body>
    </html>
