--- a/mecatronica.html
+++ b/mecatronica.html
@@ -9,7 +9,7 @@
 <a href="index.html">Inicio</a>-
 <a href="mecatronica.html">Mecatronica</a>-
 <a href="importancia.html">Importancia</a>- 
-<a href="analisemos.html">Analisemos</a> <br>copyright 2022 mandamos un mensaje via email a
+<a href="analisemos.html">Analisemos</a> <br>
 
 </center>
 
