--- a/analisemos.html
+++ b/analisemos.html
@@ -11,8 +11,7 @@
 <a href="index.html">Inicio</a>-
 <a href="mecatronica.html">Mecatronica</a>-
 <a href="importancia.html">Importancia</a>- 
-<a href="analisemos.html">Analisemos</a> <br>copyright 2022 mandamos un mensaje via email a
-<a href="mailto:zaidg4060@gmail">zaidg4060@gmail.com</a>
+<a href="analisemos.html">Analisemos</a> 
 <br><br>
       <center><h2>ANALIZEMOS MECATRONICA </h2></center>
    
@@ -91,6 +90,7 @@ Su punto fuerte es la versatilidad para crear mejores productos, procesos o sist
    <hr>
      
 <center><a target="_BLANK" href="https://issuu.com/rodrigoperezvillegas/docs/analisis_de_la_mecatronica_en_mexic_38b47385a644b7"><h2>LINK ANALISEMOS MECATRONICA</h2></a></center>
+<br>copyright 2022 mandamos un mensaje via email a
 <a href="mailto:zaidg4060@gmail">zaidg4060@gmail.com</a>
    </body>
    </html>
