--- a/importancia.html
+++ b/importancia.html
@@ -107,7 +107,7 @@ en el campo de la minería, construcción y transporte pesado.
  
   <center> <H2> <a target="_BLANK"  href="https://orientacion.universia.edu.pe/infodetail/orientacion/consejos-tecnoversia/la-importancia-de-la-mecatronica-en-la-industria-5585.html"</a> LINK IMPORTANCIA </H2></center>
 
-
+<br>copyright 2022 mandamos un mensaje via email a
 <a href="mailto:zaidg4060@gmail">zaidg4060@gmail.com</a>
 </body> 
 </html>
