--- a/mecatronica.html
+++ b/mecatronica.html
@@ -159,7 +159,7 @@ En algunos años seguramente esto no será un lujo, sino algo completamente norm
    <center><h2>ANALISEMOS MI OPINION</h2></center>
    
  <center> <H2> <a target="_BLANK"  href="https://aliatuniversidades.com.mx/blog/index.php/ingenieria-mecatronica/">LINCK IMPLICA ESTUDIAR INGENIERIA EN MECATRONICA</a> </H2></center>
-
+<br>copyright 2022 mandamos un mensaje via email a
 <a href="mailto:zaidg4060@gmail">zaidg4060@gmail.com</a>
 
 </body> 
