--- a/analisemos.html
+++ b/analisemos.html
@@ -89,7 +89,7 @@ Su punto fuerte es la versatilidad para crear mejores productos, procesos o sist
    <center><audio id="audio" controls src="media/podcast_mecatronica.mp3"></audio></center>
    <hr>
 <center><h2>ANALISEMOS MI OPINION</h2></center>
-<iframe width="560" height="315" src="https://www.youtube.com/embed/OJQn3NJ8OPs?controls=0" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+<center><iframe width="560" height="315" src="https://www.youtube.com/embed/OJQn3NJ8OPs?controls=0" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe></center>
      
 <center><a target="_BLANK" href="https://issuu.com/rodrigoperezvillegas/docs/analisis_de_la_mecatronica_en_mexic_38b47385a644b7"><h2>LINK ANALISEMOS MECATRONICA</h2></a></center>
 <br>copyright 2022 mandamos un mensaje via email a
