--- a/mecatronica.html
+++ b/mecatronica.html
@@ -157,7 +157,7 @@ En algunos años seguramente esto no será un lujo, sino algo completamente norm
 <center> <a href="media/mecatronica.pdf" download="mecatronica.pdf"><span></span>Descargar</a> </center>
 
    <center><h2>ANALISEMOS MI OPINION</h2></center>
-<iframe width="560" height="315" src="https://www.youtube.com/embed/gBT7Gi-GgVk" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+<center><iframe width="560" height="315" src="https://www.youtube.com/embed/gBT7Gi-GgVk" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe></center>
    
  <center> <H2> <a target="_BLANK"  href="https://aliatuniversidades.com.mx/blog/index.php/ingenieria-mecatronica/">LINCK IMPLICA ESTUDIAR INGENIERIA EN MECATRONICA</a> </H2></center>
 <br>copyright 2022 mandamos un mensaje via email a
